--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,45 @@
-__pycache__/
-.ipynb_checkpoints/
-results/
-assets/*.gif
-*.png
-*.jpg
+# ==============================
+# OS
+# ==============================
 .DS_Store
+Thumbs.db
+
+# ==============================
+# Python build & cache
+# ==============================
+__pycache__/
+*.py[cod]
+*.so
+*.egg-info/
+.eggs/
+build/
+dist/
+
+# ==============================
+# Virtual environments
+# ==============================
+.venv/
+venv/
+env/
+ENV/
+
+# ==============================
+# Jupyter notebooks
+# ==============================
+.ipynb_checkpoints/
+# Optional Jupyter runtime cache
+.jupyter/
+
+# ==============================
+# Editors/IDE
+# ==============================
+.vscode/
+.idea/
+
+# ==============================
+# Logs & misc
+# ==============================
+*.log
+*.tmp
+*.swp
+*.swo
